--- a/_includes/default/footer.liquid
+++ b/_includes/default/footer.liquid
@@ -1,10 +1,10 @@
 <footer class="site-footer">
     <p class="text">
-        {{ site.footer_text | default: "Powered by <a href='https://jekyllrb.com/'>Jekyll</a> with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
+        {{ site.footer_text | default: "© SpaceGirlHere @ 2024. All rights reserved. Powered by <a href='https://jekyllrb.com/'>Jekyll</a> with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
             <div class="footer-icons">
                 <ul>
-                <!-- Social icons from Font Awesome, if enabled -->
-                {% include social/icons.liquid %}
+                <!-- Social icons from Font Awesome, if enabled 
+                {% include social/icons.liquid %}-->
                 </ul>
             </div>
 </footer>
