--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,3 +2,21 @@
 ---
 
 @import "type-on-strap";
+
+.chat-container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+.chat-card {
+  margin: 10px 0;
+  border-radius: 15px;
+  overflow: hidden;
+}
+.user-message {
+  background-color: #03a9f4;
+  color: #fff;
+}
+.quantumboy-message {
+  background-color: #4caf50;
+  color: #fff;
+}
