--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,15 +1,22 @@
-<!-- Portfolio Grid Section -->
-<div class="gallery-grid">
-  {% for item in site.gallery %}
-  <div class="portfolio-cell">
-      <a class="portfolio-link" data-keyboard="true" href="{{ item.url | relative_url }}">
-          <div class="caption" title="{{ item.title }}">
-              <div class="caption-content">
-                  <i class="fas fa-search-plus fa-3x"></i>
-              </div>
-          </div>
-          <img alt="" class="" src="{{ item.img | relative_url }}">
-      </a>
-  </div>
-  {% endfor %}
+<style>
+/* force scrollbar */
+html { overflow-y: scroll; }
+
+/* To overwrite page's padding, to get bigger images */
+/* article {padding:2%;} */
+</style>
+
+<div id='masonry' class="grid">
+<div class="grid-sizer"></div>
+<div class="gutter-sizer"></div>
+{% for image in site.static_files %}
+  {% if image.path contains include.gallery_path %}
+    {% unless image.path contains '.md' %}
+        <img src="{{ image.path | relative_url }}" alt="" class="grid-item" style="padding: 0;">
+    {% endunless %}
+  {% endif %}
+{% endfor %}
 </div>
+
+<script src="{{ '/assets/js/vendor/imagesloaded.pkgd.min.js' | relative_url }}" type="text/javascript"></script>
+<script src="{{ '/assets/js/vendor/masonry.pkgd.min.js' | relative_url }}" type="text/javascript"></script>
